--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -4,6 +4,7 @@
 
 .header {
     width: 100%;
+    padding: 20px 0;
     position: fixed;
     top: 0;
     left: 0;
@@ -30,17 +31,16 @@
                 display: none;
             }
         }
-
-        @media only screen and (max-width: 767px) {
-            padding: 20px 20px;
-        }
-
     }
 
-    &__logo svg {
-        max-width: 184px;
-        width: 100%;
-        height: 26px;
+    &__logo {
+        display: flex;
+
+        svg {
+            max-width: 184px;
+            width: 100%;
+            height: 26px;
+        }
 
         @media only screen and (max-width: 767px) {
             max-width: 103px;
@@ -61,9 +61,6 @@
 
     &__nav {
         display: flex;
-        justify-content: space-between;
-        max-width: 670px;
-        width: 100%;
 
         @media only screen and (max-width:767px) {
             display: none;
@@ -73,11 +70,11 @@
     &__link {
         @include font(#FFF, $raleway, 13px, 700, 15.26px);
         padding: 36px 0;
-        max-width: 134px;
-        width: 100%;
+        min-width: 134px;
         text-align: center;
         text-decoration: none;
         text-transform: uppercase;
+        border-bottom: 3px solid transparent;
 
         &:hover {
             border-bottom: 3px solid #BABBC5;
@@ -88,10 +85,14 @@
             border-bottom: 3px solid #E71414;
         }
 
-        @media only screen and (max-width: 1024px) and (min-width:768px) {
-            max-width: 114px;
+        @media only screen and (max-width: 1024px) and (min-width:993px) {
+            min-width: 114px;
             line-height: 14.09px;
-            width: 100%;
+        }
+
+        @media only screen and (min-width: 768px) and (max-width: 992px) {
+            min-width: 100px;
+            line-height: 13px;
         }
     }
 }
@@ -126,7 +127,7 @@
     &__container {
         @include container();
         position: relative;
-        text-align: center;
+        text-align: center
     }
 
     &__title {
@@ -150,18 +151,27 @@
 
     &__description {
         @include font(#FFF, $raleway, 24px, 400, 28.18px);
-        margin-bottom: 80px;
+        max-width: 1000px;
+        margin: 0 auto 80px;
 
-        @media only screen and (max-width: 1024px)  and (min-width: 768px) {
+        @media only screen and (max-width: 1024px)  and (min-width: 944px) {
             font-size: 18px;
             line-height: 21.13px;
-            margin-bottom: 89px;
+            margin:0 auto 89px;
+            max-width: 900px;
+        }
+
+        @media only screen and (max-width: 943px) and (min-width: 768px) {
+            font-size: 18px;
+            line-height: 21.13px;
+            margin:0 auto 89px;
+            max-width: 800px; 
         }
 
         @media only screen and (max-width: 767px) {
             font-size: 14px;
             line-height: 16.44px;
-            margin-bottom: 49px;
+            margin-bottom:0 auto 49px;
         }
     }
 
@@ -173,8 +183,7 @@
         }
 
         @media only screen and (max-width: 767px) {
-            max-width: 280px;
-            width: 100%;
+            max-width: 100%;
             padding: 16px 0;
         }
     }
