--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -4,11 +4,14 @@
 
 .header {
     width: 100%;
-    padding: 20px 0;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
+
+    @media only screen and (max-width: 767px){
+        padding: 20px 0;
+    }
 
     &__container {
         @include container();
@@ -45,7 +48,6 @@
         @media only screen and (max-width: 767px) {
             max-width: 103px;
             width: 100%;
-            height: 14px;
         }
     }
 
@@ -141,7 +143,7 @@
             margin-bottom: 62px;
         }
 
-        @media only screen and (max-width: 768px) {
+        @media only screen and (max-width: 767px) {
             font-size: 36px;
             line-height: 42.26px;
             margin-bottom: 33px;
