--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -216,13 +216,10 @@
     }
 
     .feature {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         text-align: center;
 
         &__icon {
-            display: flex;
+            display: inline-flex;
             justify-content: center;
             align-items: center;
             width: 100px;
