--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -208,9 +208,7 @@
         }
 
         @media only screen and (max-width: 767px) {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
+            grid-template-columns: 1fr;
         }
 
     }
