--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -270,3 +270,35 @@
     }
 } 
 
+.works {
+    margin-bottom: 114px;
+
+    &__container {
+        @include container();
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .project {
+        position: relative;
+        padding: 100%;
+
+        &__wrapper-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height:100%;
+            object-fit: cover;
+            object-position: center;
+        }
+
+        &__content {
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: none;
+        }
+    }
+}
+
