--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -2,6 +2,10 @@
 @import "mixin";
 @import "var";
 
+html {
+    scroll-behavior: smooth;
+  }
+
 .header {
     width: 100%;
     position: fixed;
@@ -272,33 +276,83 @@
 
 .works {
     margin-bottom: 114px;
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 78px;
+    }
+
+    @media only screen and (max-width: 767px) {
+        margin-bottom: 35px;
+    }
 
     &__container {
-        @include container();
         display: grid;
         grid-template-columns: repeat(4, 1fr);
+        padding: 0 1px;
+        gap: 2px;
+        @media only screen and (max-width: 767px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
     }
 
     .project {
         position: relative;
-        padding: 100%;
+        padding-top: 100%;
 
         &__wrapper-image {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height:100%;
+            height: 100%;
             object-fit: cover;
             object-position: center;
         }
 
         &__content {
             position: absolute;
-            left: 0;
             top: 0;
-            display: none;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #ff4343cc;
+            transition: all 0.3s linear;
+
+            &:hover {
+                opacity: 1;
+            }
+
+            &:active {
+                background-color: #b90c0ccc;
+            }
+        }
+
+        &__title {
+            @include font(#FFF, $raleway, 24px, 900, 28.18px);
+            margin-bottom: 20.57px;
+            text-transform: uppercase;
+
+            @media only screen and (min-width: 768px) and (max-width: 1024px) {
+                @include font(#FFF, $raleway, 18px, 900, 21.13px);
+                margin-bottom: 12.81px;
+            }
+
+            @media only screen and (max-width: 767px) {
+                margin-bottom: 4.63px;
+            }
+        }
+
+        &__description {
+            @include font(#FFF, $raleway, 18px, 400, 21.13px);
+
+            @media only screen and (max-width: 1024px) {
+                @include font(#FFF, $raleway, 18px, 400, 16.44px);
+            }
         }
     }
 }
-
