--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -3,8 +3,8 @@
 @import "var";
 
 html {
-    scroll-behavior: smooth;
-  }
+  scroll-behavior: smooth;
+}
 
 .header {
     width: 100%;
@@ -78,7 +78,6 @@ html {
         padding: 36px 0;
         min-width: 134px;
         text-align: center;
-        text-decoration: none;
         text-transform: uppercase;
         border-bottom: 3px solid transparent;
 
@@ -352,6 +351,92 @@ html {
 
             @media only screen and (max-width: 1024px) {
                 @include font(#FFF, $raleway, 18px, 400, 16.44px);
+            }
+        }
+    }
+}
+
+.team {
+    margin-bottom: 114px;
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 78px;
+    }
+
+    @media only screen and (max-width: 767px) {
+        margin-bottom: 35px;
+    }
+
+    &__container {
+        @include container();
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 30px;
+        @media only screen and (max-width: 1024px) {
+            column-gap: 25px;
+        }
+
+        @media only screen and (max-width: 767px) {
+            row-gap: 49px;
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+
+    .member {
+        &__wrapper-photo {
+            margin-bottom: 30px;
+            @media only screen and (max-width: 1024px) {
+                margin-bottom: 27px;
+            }
+            
+            @media only screen and (max-width: 767px) {
+                margin-bottom: 28px;
+            }
+        }
+
+        &__photo {
+          object-fit: cover;
+          object-position: center;
+          width: 100%;
+          height: 100%;
+        }
+
+        &__name {
+            @include font(#2D3033, $raleway, 24px, 700, 28.18px);
+            text-transform: capitalize;
+            margin-bottom: 5.29px;
+            @media only screen and (max-width: 1024px) {
+                font-size: 18px;
+                line-height: 21.13px;
+                margin-bottom: 4.6px;
+            }
+        }
+
+        &__position {
+            @include font(#FF4343, $raleway, 18px, 400, 21.13px);
+            text-transform: uppercase;
+            margin-bottom: 17.86px;
+            @media only screen and (max-width: 1024px) {
+                font-size: 14px;
+                line-height: 16.44px;
+                margin-bottom: 22.45px;
+            }
+
+            @media only screen and (max-width: 767px) {
+                margin-bottom: 38.49px;
+            }
+        }
+
+        &__text {
+            @include font(#6C7279, $raleway, 18px, 400, 21.13px);
+            margin-bottom: 37.86px;
+            @media only screen and (max-width: 1024px) {
+                font-size: 14px;
+                line-height: 16.44px;
+                margin-bottom: 39.2px;
+            }
+
+            @media only screen and (max-width: 767px) {
+                margin-bottom: 55.15px;
             }
         }
     }
