--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -394,10 +394,10 @@ html {
         }
 
         &__photo {
-          object-fit: cover;
-          object-position: center;
-          width: 100%;
-          height: 100%;
+            object-fit: cover;
+            object-position: center;
+            width: 100%;
+            height: 100%;
         }
 
         &__name {
@@ -437,6 +437,18 @@ html {
 
             @media only screen and (max-width: 767px) {
                 margin-bottom: 55.15px;
+            }
+        }
+
+        &__social-icon path {
+            transition: all 0.5s linear;
+            
+            &:hover {
+                fill: blue;
+            }
+    
+            &:active {
+                fill: #409bf0;
             }
         }
     }
