--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -384,6 +384,8 @@ html {
     .member {
         &__wrapper-photo {
             margin-bottom: 30px;
+            aspect-ratio: 1;
+            display: flex;
             @media only screen and (max-width: 1024px) {
                 margin-bottom: 27px;
             }
@@ -398,6 +400,18 @@ html {
             object-position: center;
             width: 100%;
             height: 100%;
+        }
+
+        &__info {
+            margin-bottom: 37.86px;
+            @media only screen and (max-width: 1024px) {
+                margin-bottom: 39.2px;
+            }
+
+            @media only screen and (max-width:767px) {
+                margin-bottom: 55.15px;
+            }
+
         }
 
         &__name {
@@ -428,27 +442,24 @@ html {
 
         &__text {
             @include font(#6C7279, $raleway, 18px, 400, 21.13px);
-            margin-bottom: 37.86px;
             @media only screen and (max-width: 1024px) {
                 font-size: 14px;
                 line-height: 16.44px;
-                margin-bottom: 39.2px;
-            }
-
-            @media only screen and (max-width: 767px) {
-                margin-bottom: 55.15px;
             }
         }
 
-        &__social-icon path {
+        &__social-icon {
+            display: inline-flex;
+            & path {
             transition: all 0.5s linear;
             
-            &:hover {
-                fill: blue;
-            }
-    
-            &:active {
-                fill: #409bf0;
+                &:hover {
+                    fill: blue;
+                }
+        
+                &:active {
+                    fill: #409bf0;
+                }
             }
         }
     }
