--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -184,15 +184,6 @@ html {
 
     &__btn {
         @include btn();
-
-        @media only screen and (max-width: 1024px)  and (min-width: 768px) {
-            max-width: 314px;
-        }
-
-        @media only screen and (max-width: 767px) {
-            max-width: 100%;
-            padding: 16px 0;
-        }
     }
 }
 
@@ -462,5 +453,58 @@ html {
                 }
             }
         }
+    }
+}
+
+.download {
+    margin-bottom: 114px;
+    @media only screen and (max-width: 1024px) {
+        margin-bottom: 78px;
+    }
+
+    @media only screen and (max-width: 767px) {
+        margin-bottom: 45px;
+    }
+
+    &__container {
+        @include container();
+        text-align: center;
+    }
+
+    &__title {
+        @include font(#000, $raleway, 30px, 500, 35.22px);
+        margin-bottom: 22px;
+        @media only screen and (max-width: 1024px) {
+            font-size: 24px;
+            line-height: 28.18px;
+            margin-bottom: 20px;
+        }
+
+        @media only screen and (max-width: 767px) {
+            font-size: 18px;
+            line-height: 21.13px;
+            margin-bottom: 30px;
+        }
+    }
+
+    &__description {
+        @include font(#000, $raleway, 18px, 700, 21.13px);
+        text-transform: uppercase;
+        margin-bottom: 47.71px;
+        @media only screen and (max-width: 1024px) {
+            font-size: 14px;
+            line-height: 16.44px;
+            margin-bottom: 43.29px;
+        }
+
+        @media only screen and (max-width: 767px) {
+            font-size: 15px;
+            line-height: 15.26px;
+            margin-bottom: 15px;
+        }
+    }
+
+    &__btn {
+        @include btn();
     }
 }
