--- a/src/assets/style/mixin.scss
+++ b/src/assets/style/mixin.scss
@@ -20,6 +20,7 @@
     padding: 26px 0;
     text-transform: uppercase;
     cursor: pointer;
+    transition: all 0.3s linear;
     @include font(#FFF, $raleway, 24px, 900, 28.18px);
     @media only screen and (max-width: 1024px)  and (min-width: 768px) {
         max-width: 314px;
