refactor(hw-13): add a part of script for header block

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -40,6 +40,11 @@ html {
         }
     }
 
+    &.scrolled {
+        background: #252840;
+        z-index: 2;   
+    }
+
     &__logo {
         display: flex;
 
