--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -450,16 +450,15 @@ html {
 
         &__social-icon {
             display: inline-flex;
-            & path {
-            transition: all 0.5s linear;
-            
-                &:hover {
-                    fill: blue;
-                }
+  
+            &:hover path {
+                transition: all 0.5s linear;
+                fill: #0000ff;
+            }
         
-                &:active {
-                    fill: #409bf0;
-                }
+             &:active path {
+                transition: all 0.5s linear;
+                fill: #409bf0;
             }
         }
     }
@@ -696,11 +695,15 @@ html {
     }
 
     & .social {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
         @media only screen and (max-width: 767px) {
             margin-bottom: 59.05px;
+        }
+
+        & .footer__title {
+            margin-bottom: 48.86px;
+            @media only screen and (max-width: 1024px) {
+                margin-bottom: 32.51px;
+            }
         }
     }
 
@@ -718,23 +721,20 @@ html {
     }
 
     &__social-icon {
-        display: inline-flex;
-        & path {
-        transition: all 0.5s linear;
+    display: inline-flex;
         
-            &:hover {
-                fill: #04ff00;
-            }
+        &:hover path {
+            transition: all 0.5s linear;
+            fill: #04ff00;
+        }
     
-            &:active {
-                fill: #f0ea40;
-            }
+         &:active path {
+            transition: all 0.5s linear;
+            fill: #f0ea40;
         }
     }
 
     &__wrapper-additional {
-        display: flex;
-        justify-content: center;
         background-color: #2C3154;
         padding: 23.86px 0 24.14px;
         @media only screen and (max-width: 1024px) {
@@ -754,6 +754,7 @@ html {
         @include font(#808080, $raleway, 18px, 400, 21.13px);
         text-transform: capitalize;
         width: 100%;
+        margin: 0 auto;
         @media only screen and (max-width: 1024px) {
             font-size: 14px;
             line-height: 16.44px;
